<?xml version="1.0" encoding="utf-8"?>
<com.allattentionhere.fabulousfilter.AAH_FilterView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        tools:ignore="MissingPrefix"
        tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#E0E0E0"
        android:orientation="vertical"
        android:minWidth="1000dp"
        android:minHeight="1000dp"
        tools:ignore="MissingPrefix">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                fontPath="fonts/Roboto-Bold.ttf"
                android:textColor="@color/text_color_primary"
                android:text="@string/filter"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/img_close_filter"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:padding="12dp"
                android:src="@drawable/multiply"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                fontPath="fonts/Roboto-Bold.ttf"
                android:textColor="@color/text_color_primary"
                android:padding="4dp"
                android:text="@string/sort_by"/>

            <info.hoang8f.android.segmented.SegmentedGroup
                android:id="@+id/choice_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@android:color/white"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/view"
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/view" />
                <RadioButton
                    android:id="@+id/like"
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/likes" />
                <RadioButton
                    android:id="@+id/share"
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/share" />
                <RadioButton
                    android:id="@+id/date"
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />
            </info.hoang8f.android.segmented.SegmentedGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                fontPath="fonts/Roboto-Bold.ttf"
                android:textColor="@color/text_color_primary"
                android:layout_marginTop="14dp"
                android:text="@string/order_by"/>

            <info.hoang8f.android.segmented.SegmentedGroup
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@android:color/white"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/desc"
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Desc" />
                <RadioButton
                    android:id="@+id/asc"
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Asc" />
            </info.hoang8f.android.segmented.SegmentedGroup>
        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageButton
                android:background="@drawable/states_fab_button"
                android:id="@+id/imgbtn_refresh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/refresh"
                android:tint="@android:color/white" />

            <ImageButton
                android:background="@drawable/states_fab_button"
                android:id="@+id/imgbtn_apply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/done"
                android:tint="@android:color/white" />

        </LinearLayout>
    </RelativeLayout>
</com.allattentionhere.fabulousfilter.AAH_FilterView>